# agent-pinning-poc

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: osv-scanner.yml
docs/: SECURITY_TESTING.md
reports/: .gitkeep
src/agent_goal_binding/: agent.py
src/agent_goal_binding/auth/: merkletree.py  service.py  verification.py
src/agent_goal_binding/crypto/: signing.py
src/agent_goal_binding/dashboard/: index.html
tests/: conftest.py  support.py  test_attacks.py  test_merkle_chain.py  test_verification.py
tests/security/: adaptive_probes.py  conftest.py  test_garak_probes.py  test_purplellama.py
tests/security/custom_probes/: goal_tampering.py  permission_escalation.py
tools/: run_garak_scan.py  run_purplellama_eval.py
